--- a/HOMEWORK DOM/PART 2/index.html
+++ b/HOMEWORK DOM/PART 2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src='11(Q).js' defer></script>
+    <script src='03.js' defer></script>
     <title>Document</title>
     <style>
     p {
@@ -25,14 +25,7 @@
         <input id='input'>
     </div>
 
-    <div id='04'>
-        <input id='input'>
-    </div>
-
-    <div id='05'>
-        <input id='input'>
-    </div>
-
+ 
     <div id='06'>
         <p id='myunique6'>06 task</p>
     </div>
