--- a/HOMEWORK DOM/PART 3/index.html
+++ b/HOMEWORK DOM/PART 3/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src='18(Q).js' defer></script>
+    <script src='17(Q).js' defer></script>
 </head>
 <body>
+    <button id="myunique" class="class1 class2 class3 class4" id='button1' type="button">Кнопка</button>
 
 </body>
 </html>
